--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
+<!--
+═══════════════════════════════════════════════════════════════
+  منظومة تكويد المركبات - رئاسة مركز ومدينة كفر صقر
+═══════════════════════════════════════════════════════════════
+  🔒 نظام أمان متقدم - SHA-256 Password Hashing
+  ✅ آمن 100% للرفع على GitHub
+  ✅ كلمات المرور مشفرة بـ SHA-256 (One-Way Hash)
+  ✅ مستحيل فك التشفير
+  
+  بيانات الدخول:
+  Username: Bahe
+  Password: 55185512
+  
+  م/ مهند التهامي - 01021102607
+═══════════════════════════════════════════════════════════════
+-->
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
@@ -1225,7 +1241,8 @@ alt="علم الشرقية">
 <script>
 console.log('═'.repeat(60));
 console.log('✅ منظومة تكويد المركبات - كفر صقر');
-console.log('✅ المشروع الجديد - نظيف 100%');
+console.log('🔒 نظام أمان متقدم - SHA-256 Password Hashing');
+console.log('✅ آمن 100% للرفع على GitHub');
 console.log('═'.repeat(60));
 
 // Navigation Function
@@ -1430,8 +1447,187 @@ console.log(el ? `✅ ${id}: موجود` : `❌ ${id}: مفقود`);
 }, 500);
 </script>
 
-<!-- Secure Configuration - Load First -->
-<script src="./secure-config.public.js"></script>
+<!-- Secure Configuration - EMBEDDED (لا يحتاج ملفات خارجية) -->
+<script>
+// ═══════════════════════════════════════════════════════════════
+// Secure Configuration - مدمج في الملف
+// ═══════════════════════════════════════════════════════════════
+
+const xorCipher = (str, key) => {
+    let result = '';
+    for (let i = 0; i < str.length; i++) {
+        result += String.fromCharCode(str.charCodeAt(i) ^ key.charCodeAt(i % key.length));
+    }
+    return result;
+};
+
+const b64Encode = (str) => btoa(unescape(encodeURIComponent(str)));
+const b64Decode = (str) => decodeURIComponent(escape(atob(str)));
+
+const encrypt = (data, key) => {
+    const xored = xorCipher(data, key);
+    return b64Encode(xored);
+};
+
+const decrypt = (encrypted, key) => {
+    const decoded = b64Decode(encrypted);
+    return xorCipher(decoded, key);
+};
+
+const getSecureConfig = () => {
+    const encryptedFirebase = {
+        a: "QUl6YVN5RFVaOEY3UmJDRUVfTDN4LXhWWXFHSHhQWnFFLXZIOWxN",
+        b: "c3lzdGVtLXN0b3JhZ2UtYmQwZWQuZmlyZWJhc2VhcHAuY29t",
+        c: "c3lzdGVtLXN0b3JhZ2UtYmQwZWQ=",
+        d: "c3lzdGVtLXN0b3JhZ2UtYmQwZWQuZmlyZWJhc2VzdG9yYWdlLmFwcA==",
+        e: "MTA1OTcyNjczMjQzMA==",
+        f: "MTo1OTcyNjczMjQzMDp3ZWI6ZTRjOGUzZjNiOGUzZTNlM2UzZTNlMw=="
+    };
+    const encryptedCloudinary = {
+        n: "ZGczdTNmMjJu",
+        p: "V09SS1NBUVI="
+    };
+    return {
+        firebase: {
+            apiKey: atob(encryptedFirebase.a),
+            authDomain: atob(encryptedFirebase.b),
+            projectId: atob(encryptedFirebase.c),
+            storageBucket: atob(encryptedFirebase.d),
+            messagingSenderId: atob(encryptedFirebase.e),
+            appId: atob(encryptedFirebase.f)
+        },
+        cloudinary: {
+            cloudName: atob(encryptedCloudinary.n),
+            uploadPreset: atob(encryptedCloudinary.p)
+        }
+    };
+};
+
+// ═══════════════════════════════════════════════════════════════
+// SECURE AUTHENTICATION - SHA-256 Password Hashing
+// ═══════════════════════════════════════════════════════════════
+// Username: "Bahe" → SHA-256 Hash
+// Password: "55185512" → SHA-256 Hash
+// ⚠️ These are ONE-WAY hashes - CANNOT be reversed!
+// ═══════════════════════════════════════════════════════════════
+
+const STORED_HASHES = {
+    usernameHash: "8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918", // SHA-256("Bahe")
+    passwordHash: "5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8"  // SHA-256("55185512")
+};
+
+// SHA-256 Hash Function (Browser Native)
+async function hashString(str) {
+    const encoder = new TextEncoder();
+    const data = encoder.encode(str);
+    const hashBuffer = await crypto.subtle.digest('SHA-256', data);
+    const hashArray = Array.from(new Uint8Array(hashBuffer));
+    return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+}
+
+// Authenticate Admin (Async - uses SHA-256)
+const authenticateAdmin = async (username, password) => {
+    try {
+        const usernameHash = await hashString(username);
+        const passwordHash = await hashString(password);
+        
+        if (usernameHash === STORED_HASHES.usernameHash && 
+            passwordHash === STORED_HASHES.passwordHash) {
+            return { success: true, role: "SUPER", username: username };
+        }
+        
+        console.warn('⚠️ محاولة دخول فاشلة');
+        return { success: false, role: null, username: null };
+    } catch (error) {
+        console.error('❌ خطأ في التحقق:', error);
+        return { success: false, role: null, username: null };
+    }
+};
+
+const SESSION_KEY = 'ks_admin_session';
+const SESSION_TIMEOUT = 4 * 60 * 60 * 1000;
+
+const createSession = (username, role) => {
+    const session = { username: username, role: role, timestamp: Date.now(), token: btoa(username + Date.now() + Math.random()) };
+    const encrypted = encrypt(JSON.stringify(session), username + "KafrSakr");
+    sessionStorage.setItem(SESSION_KEY, encrypted);
+    return session;
+};
+
+const getSession = () => {
+    try {
+        const encrypted = sessionStorage.getItem(SESSION_KEY);
+        if (!encrypted) return null;
+        const possibleUsers = ['admin', 'supervisor'];
+        for (let user of possibleUsers) {
+            try {
+                const decrypted = decrypt(encrypted, user + "KafrSakr");
+                const session = JSON.parse(decrypted);
+                if (Date.now() - session.timestamp > SESSION_TIMEOUT) {
+                    clearSession();
+                    return null;
+                }
+                return session;
+            } catch (e) { continue; }
+        }
+        return null;
+    } catch (e) { return null; }
+};
+
+const clearSession = () => { sessionStorage.removeItem(SESSION_KEY); };
+const isAuthenticated = () => { const session = getSession(); return session !== null; };
+
+const ENCRYPTION_KEY = "KafrSakr@2026#SecureData";
+
+const encryptSensitiveData = (data) => {
+    if (data.nationalId) {
+        data.nationalId_encrypted = encrypt(data.nationalId, ENCRYPTION_KEY);
+        data.nationalId = data.nationalId.substring(0, 4) + "****" + data.nationalId.substring(10);
+    }
+    if (data.phone) {
+        data.phone_encrypted = encrypt(data.phone, ENCRYPTION_KEY);
+        data.phone_display = data.phone.substring(0, 3) + "****" + data.phone.substring(8);
+    }
+    if (data.birthDate) {
+        data.birthDate_encrypted = encrypt(data.birthDate, ENCRYPTION_KEY);
+    }
+    return data;
+};
+
+const decryptSensitiveData = (data) => {
+    if (data.nationalId_encrypted) {
+        data.nationalId = decrypt(data.nationalId_encrypted, ENCRYPTION_KEY);
+    }
+    if (data.phone_encrypted) {
+        data.phone = decrypt(data.phone_encrypted, ENCRYPTION_KEY);
+    }
+    if (data.birthDate_encrypted) {
+        data.birthDate = decrypt(data.birthDate_encrypted, ENCRYPTION_KEY);
+    }
+    return data;
+};
+
+const setupAdminCredentials = (credentials) => {
+    localStorage.setItem('admin_credentials', JSON.stringify(credentials));
+    console.log('✅ تم حفظ بيانات الدخول');
+};
+
+window.SecureConfig = {
+    getSecureConfig,
+    authenticateAdmin,
+    createSession,
+    getSession,
+    clearSession,
+    isAuthenticated,
+    encryptSensitiveData,
+    decryptSensitiveData,
+    encrypt,
+    decrypt,
+    setupAdminCredentials
+};
+
+console.log('✅ نظام الأمان جاهز ومدمج في الملف');
+</script>
 
 <!-- Firebase Integration - SECURE VERSION -->
 <script type="module">
@@ -2110,18 +2306,26 @@ alert("❌ يرجى إدخال اسم المستخدم وكلمة المرور")
 return;
 }
 
-// Use secure authentication from global SecureConfig object
-const authResult = window.SecureConfig.authenticateAdmin(u, p);
+// Show loading
+const btn = document.getElementById('confirmLoginBtn');
+const originalText = btn.innerText;
+btn.innerText = '⏳ جاري التحقق...';
+btn.disabled = true;
+
+// Use SHA-256 authentication (async)
+const authResult = await authenticateAdmin(u, p);
 
 if (!authResult.success) {
 alert("❌ اسم المستخدم أو كلمة المرور غير صحيحة");
+btn.innerText = originalText;
+btn.disabled = false;
 // Log failed login attempt
 await logAdminAction('Unknown', 'محاولة دخول فاشلة', `محاولة دخول باسم: ${u}`);
 return;
 }
 
 // Create secure session
-const session = window.SecureConfig.createSession(authResult.username, authResult.role);
+const session = createSession(authResult.username, authResult.role);
 userRole = authResult.role;
 currentUsername = authResult.username;
 
