--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   ✅ مستحيل فك التشفير
   
   بيانات الدخول:
-  Username: Bahe
-  Password: 55185512
+  Username: Eltohamy
+  Password: 551855125500
   
   م/ مهند التهامي - 01021102607
 ═══════════════════════════════════════════════════════════════
@@ -1506,14 +1506,14 @@ const getSecureConfig = () => {
 // ═══════════════════════════════════════════════════════════════
 // SECURE AUTHENTICATION - SHA-256 Password Hashing
 // ═══════════════════════════════════════════════════════════════
-// Username: "Bahe" → SHA-256 Hash
-// Password: "55185512" → SHA-256 Hash
+// Username: "Eltohamy" → SHA-256 Hash
+// Password: "551855125500" → SHA-256 Hash
 // ⚠️ These are ONE-WAY hashes - CANNOT be reversed!
 // ═══════════════════════════════════════════════════════════════
 
 const STORED_HASHES = {
-    usernameHash: "8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918", // SHA-256("Bahe")
-    passwordHash: "5e884898da28047151d0e56f8dc6292773603d0d6aabbdd62a11ef721d1542d8"  // SHA-256("55185512")
+    usernameHash: "0374325315d6b42a0653e7506b7ad03345469624515b0dd327ba9ea571ca8ac3", // SHA-256("Eltohamy")
+    passwordHash: "a7e5464e053f294fdf2722bac2440aa90e1296fc28a1d8a66eb635238c3b5f95"  // SHA-256("551855125500")
 };
 
 // SHA-256 Hash Function (Browser Native)
