--- a/index.html
+++ b/index.html
@@ -1065,6 +1065,16 @@ height: 300px;
 
 <div id="importPreview" style="display:none; margin: 25px 0; max-height: 300px; overflow-y: auto; background: white; padding: 20px; border-radius: 15px; border: 2px solid #ddd;"></div>
 
+<!-- Progress Bar -->
+<div id="importProgress" style="display:none; margin: 25px 0;">
+<div style="background: #f0f0f0; border-radius: 10px; overflow: hidden; height: 30px; position: relative;">
+<div id="progressBar" style="background: linear-gradient(135deg, var(--secondary) 0%, #229954 100%); height: 100%; width: 0%; transition: width 0.3s; display: flex; align-items: center; justify-content: center;">
+<span id="progressText" style="color: white; font-weight: bold; font-size: 0.9rem; position: absolute; width: 100%; text-align: center; z-index: 1;">0%</span>
+</div>
+</div>
+<p id="progressStatus" style="text-align: center; margin-top: 10px; color: #666; font-weight: 600;">جاري المعالجة...</p>
+</div>
+
 <div style="display:flex; gap:15px; margin-top:35px;">
 <button id="confirmImportBtn" class="btn" style="flex:1; padding:18px; font-size: 1.1rem; background: linear-gradient(135deg, var(--secondary) 0%, #229954 100%); color: white;">✅ تأكيد الاستيراد</button>
 <button onclick="document.getElementById('bulkImportModal').style.display='none'" class="btn" style="flex:1; padding:18px; font-size: 1.1rem; background: linear-gradient(135deg, var(--danger) 0%, #c0392b 100%); color: white;">❌ إلغاء</button>
@@ -3524,32 +3534,68 @@ return;
 }
 
 document.getElementById('loadingSpinner').style.display = 'block';
+document.getElementById('importProgress').style.display = 'block';
+document.getElementById('confirmImportBtn').disabled = true;
+
 let successCount = 0;
 let errorCount = 0;
 let duplicateCount = 0;
 const errors = [];
 
+// Helper function to update progress
+const updateProgress = (current, total, status) => {
+const percent = Math.round((current / total) * 100);
+document.getElementById('progressBar').style.width = percent + '%';
+document.getElementById('progressText').textContent = percent + '%';
+document.getElementById('progressStatus').textContent = status;
+};
+
 try {
+// Get existing data from localStorage for faster duplicate check
+updateProgress(0, 100, '⏳ جاري تحميل البيانات الحالية...');
+let existingOrders = [];
+try {
+const stored = localStorage.getItem('vehicleOrders');
+if (stored) existingOrders = JSON.parse(stored);
+} catch (e) {
+console.error('خطأ في قراءة LocalStorage:', e);
+}
+
+// Create a Set of existing national IDs for fast lookup
+const existingNIDs = new Set(existingOrders.map(o => o.nationalId));
+
+updateProgress(10, 100, '⏳ جاري معالجة البيانات...');
 const codeInfo = await getSmartNextCode();
 let nextCode = codeInfo.next;
 
-for (let i = 0; i < importedData.length; i++) {
+// Process all records
+const recordsToAdd = [];
+const totalRecords = importedData.length;
+
+for (let i = 0; i < totalRecords; i++) {
 const record = importedData[i];
 
-if (!record.owner || record.nationalId.length !== 14) {
+// Update progress every 10 records
+if (i % 10 === 0) {
+const progress = 10 + Math.round((i / totalRecords) * 40); // 10-50%
+updateProgress(progress, 100, `⏳ معالجة السجل ${i + 1} من ${totalRecords}...`);
+}
+
+// More lenient validation (like import_excel.html)
+if (!record.owner || record.owner.length < 3) {
 errorCount++;
-errors.push(`السجل ${i + 1}: بيانات غير صحيحة (الاسم أو الرقم القومي)`);
+errors.push(`السجل ${i + 1}: اسم غير صحيح`);
 continue;
 }
 
-if (record.phone && record.phone.length !== 11) {
+if (!record.nationalId || record.nationalId.length < 10) {
 errorCount++;
-errors.push(`السجل ${i + 1}: رقم الهاتف غير صحيح`);
+errors.push(`السجل ${i + 1}: رقم قومي غير صحيح`);
 continue;
 }
 
-const checkSnap = await getDocs(query(window.dbRef, where("nationalId", "==", record.nationalId)));
-if (!checkSnap.empty) {
+// Check duplicate in localStorage (much faster)
+if (existingNIDs.has(record.nationalId)) {
 duplicateCount++;
 continue;
 }
@@ -3559,7 +3605,7 @@ if (!record.vCode) nextCode++;
 
 const refNumber = 'KS-IMP-' + Date.now().toString().slice(-8) + '-' + i;
 
-await addDoc(dbRef, {
+const newRecord = {
 owner: record.owner,
 nationalId: record.nationalId,
 phone: record.phone || '',
@@ -3584,12 +3630,45 @@ timestamp: Date.now(),
 note: record.vCode ? `استيراد مع كود: ${finalCode}` : "استيراد من Excel",
 by: userRole
 }]
-});
+};
 
+recordsToAdd.push(newRecord);
+existingNIDs.add(record.nationalId); // Add to set to prevent duplicates within import
 successCount++;
 }
 
+// Save all to localStorage first (fast)
+updateProgress(50, 100, '💾 جاري الحفظ في LocalStorage...');
+existingOrders.push(...recordsToAdd);
+localStorage.setItem('vehicleOrders', JSON.stringify(existingOrders));
+console.log(`✅ تم حفظ ${recordsToAdd.length} سجل في LocalStorage`);
+
+// Then save to Firebase in batches (slower but in background)
+updateProgress(60, 100, '☁️ جاري الحفظ في Firebase...');
+console.log('⏳ جاري الحفظ في Firebase...');
+const batchSize = 50; // Firebase batch limit is 500, we use 50 for safety
+for (let i = 0; i < recordsToAdd.length; i += batchSize) {
+const batch = recordsToAdd.slice(i, i + batchSize);
+
+// Update progress
+const progress = 60 + Math.round((i / recordsToAdd.length) * 35); // 60-95%
+updateProgress(progress, 100, `☁️ حفظ ${Math.min(i + batchSize, recordsToAdd.length)} من ${recordsToAdd.length} في Firebase...`);
+
+// Save batch to Firebase
+for (const record of batch) {
+try {
+await addDoc(dbRef, record);
+} catch (e) {
+console.error('خطأ في حفظ السجل:', e);
+}
+}
+
+console.log(`✅ تم حفظ ${Math.min(i + batchSize, recordsToAdd.length)} من ${recordsToAdd.length} في Firebase`);
+}
+
+updateProgress(100, 100, '✅ اكتمل الاستيراد!');
 document.getElementById('loadingSpinner').style.display = 'none';
+document.getElementById('importProgress').style.display = 'none';
 document.getElementById('bulkImportModal').style.display = 'none';
 
 let resultMsg = `✅ اكتمل الاستيراد!\n\n📊 الإحصائيات:\n✅ نجح: ${successCount} سجل\n⚠️ مكرر (تم تخطيه): ${duplicateCount} سجل\n❌ فشل: ${errorCount} سجل\n\n📁 إجمالي السجلات المعالجة: ${importedData.length}`;
@@ -3604,7 +3683,10 @@ location.reload();
 
 } catch (error) {
 document.getElementById('loadingSpinner').style.display = 'none';
+document.getElementById('importProgress').style.display = 'none';
+document.getElementById('confirmImportBtn').disabled = false;
 alert('❌ حدث خطأ أثناء الاستيراد: ' + error.message);
+console.error('Import error:', error);
 }
 };
 
